<resources>
    <string name="app_name">PigDiceGamePlusIntro</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Game Play Instructions</string>
    <string name="how_to_win">How To Win</string>
    <string name="win_instruct">The first player to reach 100 points wins the game.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="button_roll">Roll</string>
    <string name="button_hold">Hold</string>
    <string name="button_reset">Reset</string>
    <string name="playerScore"></string>
    <string name="compScore"></string>
    <string name="turnScore"></string>
    <string name="winner"></string>
</resources>
