<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alisoncheu.pigdicegame.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Score: 0"/>

    <TextView
        android:id="@+id/compScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Computer Score: 0"
        android:layout_alignTop="@+id/playerScore"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/turnScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_alignTop="@+id/compScore"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:id= "@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:id = "@+id/dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dice1"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/compScore"
        android:layout_alignLeft="@+id/compScore"
        android:layout_alignStart="@+id/compScore" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_roll"
        android:onClick="sendRoll"
        android:layout_alignTop="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hold"
        android:onClick="sendHold"
        android:layout_alignTop="@+id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        android:onClick="sendReset"
        android:layout_below="@+id/dice"
        android:layout_toRightOf="@+id/compScore"
        android:layout_toEndOf="@+id/compScore" />

</RelativeLayout>
