<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alisoncheu.pigdicegameplusintro.PigDiceGameIntro"
    tools:showIn="@layout/activity_pig_dice_game_intro"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/pig"
        android:src="@drawable/pigdice"
        android:layout_width="668dp"
        android:layout_height="201dp"
        android:layout_above="@+id/welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.24" />

    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textSize="@dimen/font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/description"
        android:text="User goes first to either roll or hold. Rolling any number except 1 will go toward points. If the player rolls a 1 or chooses to hold, the computer's turn will go next. The computer can only retrieve as much as 20 points per round."
        android:textSize="@dimen/small_size"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/how_to_win"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:includeFontPadding="false"
        android:layout_weight="0.07" />

    <TextView
        android:id="@+id/how_to_win"
        android:text="@string/how_to_win"
        android:textSize="@dimen/font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/win_instruct"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/win_instruct"
        android:text="@string/win_instruct"
        android:textSize="@dimen/small_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button"
        android:text="Play"
        android:onClick="goPlay"
        android:textSize="@dimen/font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
